Added image changing for states

--- a/build-SpaceInvaders-Desktop_Qt_5_8_0_clang_64bit-Debug/Makefile
+++ b/build-SpaceInvaders-Desktop_Qt_5_8_0_clang_64bit-Debug/Makefile
@@ -743,10 +743,12 @@ qrc_resources.cpp: ../SpaceInvaders/resources.qrc \
 		../SpaceInvaders/Images/ship.png \
 		../SpaceInvaders/Images/hunterInvader.png \
 		../SpaceInvaders/Images/hunterInvaderLaser.png \
+		../SpaceInvaders/Images/hypership.png \
 		../SpaceInvaders/Images/redInvaderLaser.png \
 		../SpaceInvaders/Images/dumbInvaderLaser.png \
 		../SpaceInvaders/Images/blueInvader.png \
 		../SpaceInvaders/Images/blueInvaderLaser.png \
+		../SpaceInvaders/Images/frozenship.png \
 		../SpaceInvaders/Sounds/death.wav \
 		../SpaceInvaders/Sounds/invader.wav \
 		../SpaceInvaders/Sounds/shoot.wav
